patterns/core/ErrorPage/errorPage.styl
$breakpoint-small = 700px
$breakpoint-medium = 1000px

.error-page
  font-family var(--font-family-regular)
  padding 0 1.5rem
  position relative

.error-page__gradient
  background-image url('/assets/images/errorPage/mountain-front.svg'),
                   url('/assets/images/errorPage/mountain-back.svg'),
                   linear-gradient(180deg, #79B6E2 0%, #E9ECF1 56%, #E9ECF1 100%)
  background-repeat repeat-x,
                    repeat-x,
                    no-repeat
  background-position bottom left,
                      bottom right,
                      center center
  position absolute
  width 100vw
  height 30rem
  left 0
  right 0
  z-index var(--z-index-lowest)

  @media (min-width $breakpoint-medium)
    height 45rem

.error-page__logo
  position absolute
  z-index var(--z-index-medium)
  top 1.5rem
  left 50%
  transform translateX(-50%)

  @media (min-width $breakpoint-medium)
    top 4rem

.error-page__greeting
  font-size 2.4rem
  font-weight var(--font-weight-black)
  font-style italic
  line-height 3rem
  letter-spacing 0.11rem
  background var(--neutral-00)
  color var(--primary)
  width 21rem
  padding 1.5rem 4rem
  text-align center
  border 3px solid var(--primary)
  border-radius 47.5px
  position absolute
  top 12rem
  left 50%
  transform translateX(-50%)
  z-index var(--z-index-medium)

  @media (min-width $breakpoint-small)
    font-size 3.2rem
    line-height 4.6rem
    letter-spacing 0.15rem
    width 52rem

  @media (min-width $breakpoint-medium)
    top 23rem

  &:before
  &:after
    content " "
    height 0
    width 0
    position absolute
    top 100%
    left 70%
    border solid transparent
    pointer-events none

  &:before
    border-color rgba(194,225,245,0)
    border-top-color var(--primary)
    border-right-color var(--primary)
    border-width 0.9rem
    margin-left -0.8rem

  &:after
    border-color rgba(136,183,213,0)
    border-top-color #fff
    border-right-color #fff
    border-width 0.6rem
    margin-left -0.5rem

.error-page__content
  color var(--neutral-90)
  padding-top 30rem
  position relative
  z-index var(--z-index-low)
  max-width 55rem
  margin 0 auto

  @media (min-width $breakpoint-small)
    max-width 77.6rem

  @media (min-width $breakpoint-medium)
    padding-top 45rem

  p + p
    margin-top 1rem

.error-page__heading
  font-size 3rem
  font-weight var(--font-weight-semi-bold)
  line-height 3.6rem
  letter-spacing 0.05rem
  margin-bottom 2rem

  @media (min-width $breakpoint-small)
    text-align center
    max-width 65rem
    margin 0 auto 2.5rem

  @media (min-width $breakpoint-medium)
    font-size 4.2rem
    line-height 4.8rem
    letter-spacing 0.109rem

.error-page__column-wrapper

  @media (min-width $breakpoint-small)
    display flex

    div
      flex 1 0 calc(50% - 1.25rem)

    div + div
      margin-left 2.5rem

  @media (min-width $breakpoint-medium)
    .copytext
      font-size 1.8rem
      line-height 2.4rem

.error-page__further-info
  margin-top 9.5rem
  padding-bottom 2rem

  > span
    display block
    font-weight var(--font-weight-medium)
    font-size 1.4rem
    line-height 1.8rem
    letter-spacing 0.02rem
    margin-bottom 1.5rem

  p
    font-size 1.3rem
    line-height 1.8rem

  ul
    margin-top 2rem
    font-family 'monospace'
    font-size 1.3rem
    line-height 1.8rem

    li
      display flex

    li + li
      margin-top 0.5rem

    span:first-of-type
      font-weight bold
      // margin-right 0.5rem
      flex 0 0 8rem




.cloud-1
.cloud-2
.cloud-3
.cloud-4
.cloud-5
.cloud-6
  background var(--neutral-00)
  height 2.5rem
  width 35rem
  position absolute
  opacity 0.5
  border-radius 13px

.cloud-1
  left 50%
  top 25%
  width 35rem

.cloud-2
  left 53%
  top 29%
  width 30rem

.cloud-3
  left 13%
  top 42%
  width 20rem

.cloud-4
  left 23%
  top 12%
  width 22rem

.cloud-5
  left 28%
  top 16%
  width 18rem

.cloud-6
  left 60%
  top 21%
  width 8rem

